[gd_scene load_steps=2 format=3 uid="uid://pause_menu_ui"]

[ext_resource type="Script" path="res://game/scripts/ui/PauseMenuUI.gd" id="1_script"]

[node name="PauseMenuUI" type="CanvasLayer"]
layer = 100
script = ExtResource("1_script")

[node name="Dimmer" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 512.0
offset_bottom = 288.0
color = Color(0, 0, 0, 0.5)

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -70.0
offset_right = 80.0
offset_bottom = 70.0

[node name="TitleLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -40.0
offset_top = 8.0
offset_right = 40.0
offset_bottom = 24.0
text = "PAUSED"
horizontal_alignment = 1

[node name="OptionsContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -40.0
offset_right = 50.0
offset_bottom = 60.0
alignment = 1
